yaml/03_zproxy-controller.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: zproxy-ingress
  namespace: zproxy-ingress
spec:
  selector:
      matchLabels:
        ingress-controller: zproxy-ingress
  template:
    metadata:
      labels:
        ingress-controller: zproxy-ingress
    spec:
      dnsPolicy: ClusterFirst
      serviceAccountName: zproxy-ingress-service-account
      containers:
      - name: zproxy-ingress
        image: zproxy-ingress
        imagePullPolicy: Never
        command: [ "/bin/bash", "-c", "/start.sh" ]
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
