yaml/nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zproxy-ingress-controller
  namespace: zproxy-ingress
  labels:
    ingress-controller: zproxy-ingress
spec:
  type: NodePort
  selector:
    ingress-controller: zproxy-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
