yaml/zproxy-ingress-deplyment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zproxy-ingress
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: zproxy-ingress
  namespace: zproxy-ingress
spec:
  selector:
      matchLabels:
        ingress-controller: zproxy-ingress
  template:
    metadata:
      labels:
        ingress-controller: zproxy-ingress
    spec:
      dnsPolicy: ClusterFirst
      serviceAccountName: zproxy-ingress-service-account
      containers:
      - name: zproxy-ingress
        image: zevenet/zproxy-ingress
        command: [ "/bin/bash", "-c", "/start.sh" ]
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: zproxy-ingress-controller
  namespace: zproxy-ingress
  labels:
    ingress-controller: zproxy-ingress
spec:
  type: NodePort
  selector:
    ingress-controller: zproxy-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
---
